reponsive and loadingDialog

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -16,6 +16,12 @@
 .login-pic{
     width: 316px; 
 }
+@media (max-width: 600px) {
+    .login-pic{
+        display: none;
+    }
+}
+
 .wrap-container{
     width: 960px;
     background: #fff;
