--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -49,7 +49,9 @@ nav {
 
 ul.menu {
     display: flex;
+    flex-wrap: wrap;
     list-style: none;
+    justify-content: space-between;
 }
 
 ul.menu li {
